--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,6 @@
-<div class="flex h-screen w-screen justify-center items-center bg-background-950 text-text-800 flex-col gap-2">
+<div
+  class="flex h-screen w-screen flex-col items-center justify-center gap-2 bg-background-950 text-text-800"
+>
   <div class="flex gap-4 font-medium">
     <h1 class="text-8xl">4</h1>
     <h1 class="text-8xl">0</h1>
