--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,23 +1,41 @@
-<div class="bg-background-950 flex justify-center align-center h-screen">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-6 max-w-md mx-auto p-6">
+<div class="align-center flex h-screen justify-center bg-background-950">
+  <form
+    [formGroup]="loginForm"
+    (ngSubmit)="onSubmit()"
+    class="mx-auto max-w-md space-y-6 p-6"
+  >
     <div>
       <label for="email" class="block text-sm font-medium">Email</label>
-      <input type="email" id="email" formControlName="email"
-        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+      <input
+        type="email"
+        id="email"
+        formControlName="email"
+        class="border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 mt-1 block w-full rounded-md shadow-sm"
+      />
     </div>
 
     <div>
       <label for="password" class="block text-sm font-medium">Password</label>
-      <input type="password" id="password" formControlName="password"
-        class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+      <input
+        type="password"
+        id="password"
+        formControlName="password"
+        class="border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 mt-1 block w-full rounded-md shadow-sm"
+      />
     </div>
 
-    <button type="submit" [disabled]="!loginForm.valid"
-      class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-gray-400">
+    <button
+      type="submit"
+      [disabled]="!loginForm.valid"
+      class="border-transparent bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500 disabled:bg-gray-400 flex w-full justify-center rounded-md border px-4 py-2 text-sm font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2"
+    >
       Sign in
     </button>
 
-    <InputTextComponent label="Email" formControlName="email" type="email"></InputTextComponent>
+    <InputTextComponent
+      label="Email"
+      formControlName="email"
+      type="email"
+    ></InputTextComponent>
   </form>
 </div>
-
